# pktcg

./: README.md  pyvenv.cfg  setup.cfg
pktcg/: __main__.py
pktcg/components/: board.py  card.py  enums.py  game.py  gui.py
