[metadata]
name = pktcg
version = 1.0
description = Recreation of the Pokemon Trading Card Game Base Set
long_description = A simple implementation of the Pokemon TCG Base Set from 1999 (US release) with support for two players.
license = MIT
classifiers =
    Programming Language :: Python :: 3
[options]
zip_safe = false
packages = find:
install_requires =
    structlog
[options.entry_points]
# Make sure there is a main() function in pktcg.main
console_scripts =
    pktcg = pktcg.main:main
